--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 }
 
 .newPostBtn {
-  margin: 0 1rem;
+  margin: 1rem;
   padding: 0.5rem 1rem;
   font-size: 1.3rem;
   border: none;
@@ -174,6 +174,7 @@
 .blogGrTitle {
   padding: 1rem;
   text-align: center;
+  color: white;
 }
 
 .blogBox {
@@ -263,12 +264,13 @@
 
 .footer {
   width: 100%;
-  padding: 2rem;
+  height: 100%;
+  padding: 3rem;
   background-color: rgb(44, 44, 44);
   color: white;
   font-weight: 600;
   position: sticky;
-  justify-content: center;
+  align-self: center;
 }
 
 .fRow {
@@ -277,24 +279,19 @@
 
 .footer_1 {
   text-align: center;
-  margin: auto 0;
+  align-self: center;
 }
 
 .fLogo {
-  margin: 0 auto;
+  width: 3rem;
+}
+
+.footer-text {
+  margin: auto;
 }
 
 .footer-title {
   font-size: 1.3rem;
-  /* margin: 1rem 0; */
 }
 
-.mapBox {
-  margin: auto 0;
-}
-
-.map {
-  margin-top: 2rem;
-  border-radius: 1rem;
-}
 /* + End Of Footer Section  */
